src/test/ui/issues/issue-4366.stderr
error[E0425]: cannot find function `foo` in this scope
  --> $DIR/issue-4366.rs:18:29
   |
LL |         fn sub() -> isize { foo(); 1 }
   |                             ^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |         use foo::foo;
   |
LL |         use m1::foo;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
